--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,4 +1,4 @@
-.tiles-style {
+.card-layout {
   .topic-list-item:hover {
     filter: invert(10%);
     background-color: var(--blend-primary-secondary-5);
