--- a/common/common.scss
+++ b/common/common.scss
@@ -160,6 +160,10 @@ img.non-tiles-thumbnail {
     &.visited .topic-list-data {
       background-color: unset;
     }
+
+    a.title.raw-link{
+      font-weight: 800;
+    }
   }
 
   .topic-thumbnail {
@@ -552,8 +556,6 @@ button.list-button {
   }
 
   &.has-liked svg,
-  &.has-liked,
-  &.has-liked .d-icon-heart,
   &.topic-like:not([disabled]):hover {
     color: var(--love);
   }
